--- a/Login.html
+++ b/Login.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Beeznes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Beeznes - Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
+  <div class="container">
+    <div class="login-box">
+      <h1>Log In</h1>
+      <form>
+        <input type="text" placeholder="Correo electrónico">
+        <input type="password" placeholder="Contraseña">
+        <button type="submit">Iniciar sesión</button>
+      </form>
+      <p>¿No tiene una cuenta? <a href="#">Cree una</a></p>
+    </div>
+    <div class="decoration">
+      <div class="shapes">
+        <div class="shape blue"></div>
+        <div class="shape yellow"></div>
+        <div class="shape black"></div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="logo">
+      <img src="/resources/BeeznesLogo.png" alt="Beeznes Logo">
+    </div>
+  </footer>
 </body>
 </html>
